QA_BUILD/Firmware/1.2/Build_Verification_Test_Report.md
### BVT REPORT


**Firmware Release Date** : 09/01/2025 [ Thursday ]

**Net Balancer** : NB1

**Firmware Version** : 1.2-04.1036


**Firmware Build Verification Test (BVT) Report**

|Serial No|Description|family|Tested|Results|Comments|Remarks if any|
|:----|:----|:----|:----|:----|:----|:----|
|1|Firmware Installation - Fresh|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|2|Firmware Update - via amz_SecureShell|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|3|Firmware Update - via Director|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|4|Onboarding to Director - via  amz_SecureShell|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|5|IP setting - ETH Interface - DHCP|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|6|Wifi - Station mode|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|7|Wifi - Ap mode|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|8|LTE - 4G|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|9|Tunnel - SITE TO SITE VPN - One to One |arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|10|Tunnel - SITE TO SITE VPN - One to Many|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|11|Tunnel - IPSEC One to One |arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|12|Tunnel - IPSEC One to Many|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|13|NetBalancer - IB|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|14|NetBalancer - Branch|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|15|NetBalancer - SAAS Breakout|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|16|Firewall|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|17|IPS/IDS|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|18|ELK Dashboard|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|19|Lan PC Client|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|20|System Service Status |arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|21|Check firmware Version|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|22|Check Kernel Version|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|23|Local Web UI|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|24|Check Interface Status In List Page|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|25|Enable/Disable Netflow Log On Wan|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|26|MGMT failover Validation (Backend and UI)|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|27|FSCK|arm (amz7622, bpir64, bpi-r3)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |

