QA_BUILD/Firmware/1.3/Build_Verification_Test_Report.md
### BVT REPORT

**Firmware Release Date** : 16/12/2024 [ Monday ]

**Net Balancer** : NB1

**Firmware Version** : 1.3-04.1013

**Firmware Build Verification Test (BVT) Report**

|Serial No|Description|family|Tested|Results|Comments|Remarks if any|
|:----|:----|:----|:----|:----|:----|:----|
|1|Firmware Installation - Fresh|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|2|Firmware Update - via amz_SecureShell|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|3|Firmware Update - via Director|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|4|Onboarding to Director - via  amz_SecureShell|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|5|Onboarding to Director - via Provisioning server|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|6|IP setting - ETH Interface - Static|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|7|IP setting - ETH Interface - DHCP|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|8|Wifi - Station mode|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|9|Wifi - Ap mode|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|10|LTE - 4G|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|11|LTE - 5G|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|12|Tunnel - SITE TO SITE VPN - One to One |arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|13|Tunnel - SITE TO SITE VPN - One to Many|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|14|Tunnel - IPSEC One to One |arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|15|Tunnel - IPSEC One to Many|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|16|NetBalancer - IB|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|17|NetBalancer - Branch|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|18|NetBalancer - SAAS Breakout|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|19|Firewall|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|20|IPS/IDS|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|21|ELK Dashboard|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|22|Button Factory reset|arm (amz7622, bpir64, bpi-r4)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|23|Lan PC Client|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|24|SNMP|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|25|PPPoE|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|26|Certificate Creation|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|27|System Service Status |arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|28|Check firmware Version|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|29|EBPF [ Loaded ]|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|30|Ipv6 DDOS|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|31|Check Kernel Version|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|32|Standalone UI [Local UI]|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|33|Check Interface Status In List Page|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|34|Enable/Disable Netflow Log On Wan [ In grade out state [Not Clickble]]|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|35|Ipv6 Speed Test|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|36|Flash emmc using nand|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |
|37|Ledutil|arm (amz7622, bpir64, bpi-r3, bpi-r4, cwan801)|OK|OK|PASSED| |
| | |x86 (kettop)|OK|OK|PASSED| |

